--- a/src/hrbuddy/Views/CandidateView.fxml
+++ b/src/hrbuddy/Views/CandidateView.fxml
@@ -17,7 +17,7 @@
 
 <AnchorPane fx:id="container" prefHeight="561.0" prefWidth="769.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hrbuddy.Controllers.CandidateController">
    <children>
-      <HBox layoutY="39.0" prefHeight="219.0" prefWidth="830.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="39.0">
+      <HBox layoutY="39.0" prefHeight="251.0" prefWidth="769.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="39.0">
          <children>
             <GridPane alignment="CENTER" prefHeight="246.0" prefWidth="371.0">
               <columnConstraints>
@@ -25,6 +25,7 @@
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="274.1314010620117" minWidth="10.0" prefWidth="238.0" />
               </columnConstraints>
               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -34,20 +35,22 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Titre" GridPane.halignment="LEFT" />
-                  <ComboBox fx:id="titleComboBox" onAction="#onInputValueChanged" prefHeight="27.0" prefWidth="124.0" GridPane.columnIndex="1" />
-                  <Label text="Prénom" GridPane.rowIndex="1" />
-                  <Label text="Nom" GridPane.rowIndex="2" />
-                  <Label text="Adresse" GridPane.rowIndex="3" />
-                  <Label text="Téléphone domicile" GridPane.rowIndex="4" />
-                  <Label text="Téléphone mobile" GridPane.rowIndex="5" />
-                  <Label text="Courriel" GridPane.rowIndex="6" />
-                  <TextField fx:id="firstnameTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="lastnameTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField fx:id="homephoneTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TextField fx:id="mobilephoneTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <TextField fx:id="emailTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <TextField fx:id="addressTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label text="Genre" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+                  <ComboBox fx:id="genderComboBox" onAction="#onInputValueChanged" prefHeight="27.0" prefWidth="124.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="Prénom" GridPane.rowIndex="2" />
+                  <Label text="Nom" GridPane.rowIndex="3" />
+                  <Label text="Adresse" GridPane.rowIndex="4" />
+                  <Label text="Téléphone domicile" GridPane.rowIndex="5" />
+                  <Label text="Téléphone mobile" GridPane.rowIndex="6" />
+                  <Label text="Courriel" GridPane.rowIndex="7" />
+                  <TextField fx:id="firstnameTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="lastnameTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="homephoneTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="mobilephoneTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <TextField fx:id="emailTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <TextField fx:id="addressTextField" onAction="#onInputValueChanged" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label text="ID" />
+                  <TextField fx:id="idTextField" disable="true" GridPane.columnIndex="1" />
                </children>
             </GridPane>
          </children>
@@ -55,7 +58,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </HBox>
-      <TabPane layoutY="262.0" prefHeight="294.0" prefWidth="830.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="262.0">
+      <TabPane layoutY="304.0" prefHeight="257.0" prefWidth="769.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="304.0">
         <tabs>
           <Tab text="Untitled Tab 1">
             <content>
@@ -72,11 +75,9 @@
       <ToolBar prefHeight="40.0" prefWidth="830.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <Button fx:id="newButton" mnemonicParsing="false" onAction="#newCandidate" text="Nouveau" />
-            <Button fx:id="saveButton" mnemonicParsing="false" onAction="#storeCandidate" text="Sauvegarder" />
+            <Button fx:id="saveButton" disable="true" mnemonicParsing="false" onAction="#storeCandidate" text="Sauvegarder" />
             <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="5.0" />
             <Button fx:id="searchButton" mnemonicParsing="false" text="Rechercher" />
-            <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="5.0" />
-            <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeWindow" text="Fermer" />
         </items>
       </ToolBar>
    </children>
