--- a/src/hrbuddy/Views/SearchView.fxml
+++ b/src/hrbuddy/Views/SearchView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hrbuddy.SearchController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hrbuddy.Controllers.SearchController">
    <top>
       <GridPane hgap="10.0" vgap="5.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -39,6 +39,7 @@
    <center>
       <TableView fx:id="resultTableView" onMouseClicked="#handleResultTableViewDoubleClick" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
+            <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID" visible="false" />
           <TableColumn fx:id="firstnameColumn" prefWidth="130.0" text="Prénom" />
           <TableColumn fx:id="lastnameColumn" prefWidth="130.0" text="Nom" />
             <TableColumn fx:id="telephoneColumn" prefWidth="150.0" text="Téléphone" />
