--- a/src/hrbuddy/Views/SearchView.fxml
+++ b/src/hrbuddy/Views/SearchView.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,15 +15,17 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hrbuddy.Controllers.SearchController">
    <top>
-      <GridPane hgap="10.0" vgap="5.0" BorderPane.alignment="CENTER">
+      <GridPane hgap="10.0" prefHeight="103.0" prefWidth="780.0" vgap="5.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="202.0" minWidth="10.0" prefWidth="202.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="90.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="62.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Recherche générale" />
@@ -30,6 +34,36 @@
             <TextField fx:id="searchTextField" onAction="#handleSearchTextFieldAction" GridPane.rowIndex="1" />
             <ComboBox fx:id="jobtypeComboBox" onAction="#handleJobTypeComboBoxAction" prefHeight="26.0" prefWidth="250.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="formationComboBox" onAction="#handleFormationComboBoxAction" prefWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <GridPane prefHeight="58.0" prefWidth="780.0" GridPane.columnSpan="4" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Critères de recherche" GridPane.columnSpan="6" />
+                  <CheckBox fx:id="firstnameCheckBox" mnemonicParsing="false" selected="true" text="Prénom" GridPane.rowIndex="1" />
+                  <CheckBox fx:id="lastnameCheckBox" mnemonicParsing="false" selected="true" text="Nom" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <CheckBox fx:id="addressCheckBox" mnemonicParsing="false" selected="true" text="Adresse" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <CheckBox fx:id="emailCheckBox" mnemonicParsing="false" selected="true" text="Courriel" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <CheckBox fx:id="homephoneCheckBox" mnemonicParsing="false" selected="true" text="Tél. domicile" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                  <CheckBox fx:id="cellphoneCheckBox" mnemonicParsing="false" selected="true" text="Tél. mobile" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+               </children>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </GridPane>
+            <Button fx:id="searchButton" mnemonicParsing="false" onAction="#buildSearchTextFieldData" prefHeight="25.0" prefWidth="96.0" text="Rechercher" GridPane.columnIndex="3" GridPane.rowIndex="1" />
          </children>
          <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -37,7 +71,7 @@
       </GridPane>
    </top>
    <center>
-      <TableView fx:id="resultTableView" onMouseClicked="#handleResultTableViewDoubleClick" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="resultTableView" onMouseClicked="#handleResultTableViewDoubleClick" prefHeight="348.0" prefWidth="947.0" BorderPane.alignment="CENTER">
         <columns>
             <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID" visible="false" />
           <TableColumn fx:id="firstnameColumn" prefWidth="130.0" text="Prénom" />
