--- a/src/hrbuddy/Views/SearchView.fxml
+++ b/src/hrbuddy/Views/SearchView.fxml
@@ -34,7 +34,7 @@
             <TextField fx:id="searchTextField" onAction="#handleSearchTextFieldAction" GridPane.rowIndex="1" />
             <ComboBox fx:id="jobtypeComboBox" onAction="#handleJobTypeComboBoxAction" prefHeight="26.0" prefWidth="250.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="formationComboBox" onAction="#handleFormationComboBoxAction" prefWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <GridPane prefHeight="58.0" prefWidth="780.0" GridPane.columnSpan="4" GridPane.rowIndex="2">
+            <GridPane prefHeight="58.0" prefWidth="780.0" GridPane.columnSpan="5" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -64,6 +64,7 @@
                </opaqueInsets>
             </GridPane>
             <Button fx:id="searchButton" mnemonicParsing="false" onAction="#buildSearchTextFieldData" prefHeight="25.0" prefWidth="96.0" text="Rechercher" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+             <Button fx:id="newButton" mnemonicParsing="false" onAction="#promptNewCandidateView" prefHeight="25.0" prefWidth="96.0" text="Nouveau" GridPane.columnIndex="4" GridPane.rowIndex="1" />
          </children>
          <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
