--- a/src/hrbuddy/Views/CandidateView.fxml
+++ b/src/hrbuddy/Views/CandidateView.fxml
@@ -80,7 +80,7 @@
                         </TableView>
                         <ToolBar layoutY="209.0" prefHeight="46.0" prefWidth="769.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                           <items>
-                            <Button fx:id="addExperienceButton" mnemonicParsing="false" styleClass="addButton" text="Ajouter" />
+                            <Button fx:id="addExperienceButton" mnemonicParsing="false" onAction="#handleAddExperienceButtonAction" styleClass="addButton" text="Ajouter" />
                               <Button fx:id="removeExperienceButton" disable="true" mnemonicParsing="false" onAction="#onExperienceDeleteClick" styleClass="removeButton" text="Supprimer" />
                           </items>
                         </ToolBar>
@@ -91,13 +91,19 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <columns>
                             <TableColumn prefWidth="93.0" text="Niveau" />
                             <TableColumn prefWidth="314.0" text="Diplôme" />
                               <TableColumn minWidth="0.0" prefWidth="101.0" text="Date" />
                           </columns>
                         </TableView>
+                        <ToolBar layoutX="10.0" layoutY="219.0" prefHeight="46.0" prefWidth="769.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <items>
+                              <Button fx:id="addExperienceButton1" mnemonicParsing="false" styleClass="addButton" text="Ajouter" />
+                              <Button fx:id="removeExperienceButton1" disable="true" mnemonicParsing="false" onAction="#onExperienceDeleteClick" styleClass="removeButton" text="Supprimer" />
+                           </items>
+                        </ToolBar>
                      </children></AnchorPane>
             </content>
           </Tab>
@@ -105,7 +111,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <columns>
                             <TableColumn prefWidth="75.0" text="Date" />
                             <TableColumn prefWidth="306.0" text="Emploi postulé" />
@@ -113,6 +119,12 @@
                               <TableColumn prefWidth="195.0" text="Raison" />
                           </columns>
                         </TableView>
+                        <ToolBar layoutX="10.0" layoutY="219.0" prefHeight="46.0" prefWidth="769.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <items>
+                              <Button fx:id="addExperienceButton2" mnemonicParsing="false" styleClass="addButton" text="Ajouter" />
+                              <Button fx:id="removeExperienceButton2" disable="true" mnemonicParsing="false" onAction="#onExperienceDeleteClick" styleClass="removeButton" text="Supprimer" />
+                           </items>
+                        </ToolBar>
                      </children>
                   </AnchorPane>
                </content>
