--- a/src/hrbuddy/Views/MainView.fxml
+++ b/src/hrbuddy/Views/MainView.fxml
@@ -42,7 +42,7 @@
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
                               <Hyperlink layoutX="9.4" onAction="#newCandidateTab" prefHeight="24.0" prefWidth="202.0" text="Nouveau candidat" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-                              <Hyperlink fx:id="searchCandidateButton" layoutX="14.0" layoutY="24.0" onAction="#serachCandidate" prefHeight="24.0" prefWidth="202.0" text="Rechercher un candidat" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                              <Hyperlink fx:id="searchCandidateButton" layoutX="14.0" layoutY="24.0" onAction="#searchCandidate" prefHeight="24.0" prefWidth="202.0" text="Rechercher un candidat" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                            </children>
                         </AnchorPane>
                   </content>
